# sim-studio

./: README.md  pixi.toml  pyproject.toml
src/nuremics_gui/: __init__.py
src/nuremics_studio/: nuRemics_App.py
src/nuremics_studio/apps/CANTILEVER_SHEAR_APP/: update.py  widgets.py
src/nuremics_studio/apps/DEMO_APP/: widgets.py
src/nuremics_studio/apps/general/DEMO_APP/: update.py  widgets.py
src/nuremics_studio/core/: update.py  utils.py  widgets.py
src/nuremics_studio/resources/: features.yml
