[project]
name = "nuremics-gui" 
version = "1.0.0"
description = "Graphical front-end of the nuRemics framework."
authors = [
  { name = "Julien SIGUENZA", email = "contact@julien-siguenza.com" },
]
readme = "README.md"
license = "BSD-3-Clause"
license-files = [
  "LICENSE",
  "LICENSE_TRADEMARK",
]
dependencies = [
  "nuremics @ git+https://github.com/nuremics/nuremics.git@main"
]

[project.urls]
homepage = "https://nuremics.github.io"
repository = "https://github.com/nuremics/nuremics-gui"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"nuremics.resources" = [
  "*.json",
  "*.png",
]

[tool.setuptools.packages.find]
where = ["src"]